# clv-system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: logging.yaml  params.yaml
scripts/: run_pipeline_local.ps1  run_pipeline_local.sh  seed_demo_data.py
src/api/: deps.py  main.py  schemas.py
src/api/routers/: decisioning.py  health.py  predictions.py
src/app/: app.py
src/app/pages/: 1_Overview.py  2_Customer_Explorer.py  3_Targeting_Simulator.py  4_Weight_Sweep.py  5_Reports.py
src/clv/: __init__.py  build_features.py  business.py  check_db.py  clean.py  config.py  db.py  decisioning.py  explain.py  features_sql.py  ingest.py  labels.py  metrics.py  pipeline.py  quality.py  reporting.py  rolling.py  run_all.py  run_report.py  run_score_all.py  score.py  tempdb.py  tmp_decisioning_report.py  tmp_duckdb_blended_targeting.py  tmp_weight_sweep.py  train_churn.py  train_revenue.py  windows.py
src/clv_decision_system.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_api.py  test_decisioning.py  test_features_labels.py  test_reporting.py  test_train_score.py  test_windows.py
